# multi-system-mcp-server

./: README.md  docker-compose.yml  main.py  pyproject.toml  run_all.py
.agent/workflows/: run-groq-client.md
groq_client/: client.py
mcp_client/: index.html  package-lock.json  package.json  vite.config.ts
mcp_client/src/: App.css  App.tsx  api.ts
mcp_gateway/: main.py  manager.py
mcp_servers/db_server/: main.py
mcp_servers/github_server/: main.py
migrations/: 01_init.sql
